# dotty

./: .env.example  .gitignore  FIREBASE_HELIUS_SETUP.md  GAMEPLAY.md  GETTING_STARTED_NFT.md  LOCAL-DEV-SETUP.md  MIGRATION_STATUS.md  NEXT_SESSION.md  README.md  architecture.md  clue-generator.ts  clue-service.ts  clue-webhook-handler.ts  entry-screen-README.md  entry-screen-integration-plan.md  entry-screen.html  firebase-admin-config.ts  firebase.json  firestore.indexes.json  firestore.rules  game-integration-example.js  helius-webhook-handler.ts  hide-treasure.html  hide-treasure.tsx  index.html  leaderboard.html  leaderboard.ts  local-transaction-monitor.ts  main.js  main.ts  mancer-blog-outline.md  mancer-blog.md  mancer-how-to-play-and-how-it-was-made.html  nft-service.js  nodemon.json  package.json  pnpm-lock.yaml  search-service.ts  search-transactions.html  search-transactions.ts  (+13 more)
.claude/: settings.local.json
docs/: ANCHOR_BUILD_ISSUE.md  HELIUS_FIREBASE_IMPLEMENTATION.md  HELIUS_FIREBASE_INTEGRATION_SOW.md  HELIUS_SETUP.md  HIDE_TREASURE_SIMPLE.md  HIDE_TREASURE_TESTING.md  LEADERBOARD.md  LEADERBOARD_SIMPLE.md  TREASURE_SEARCH_ARCHITECTURE.md  WALLET_TESTING_QUICKSTART.md
public/: hide-treasure-test.html  leaderboard.html
scripts/: analyze-blockchain.sh  create-test-token.sh  dev-all.sh  dev-local.sh  fingerprint.js  firebase-module.js  firebase-service.js  initialize-vault.ts  setup-local-test.sh  start-local-validator.sh
solana/: .gitignore  AUDIT-REPORT.md  Anchor.toml  BOOTY_TOKEN_IMPLEMENTATION.md  CONTRACTS-GUIDE.md  MULTI-CONTRACT-SETUP.md  README.md  package.json  tasks.md  tsconfig.json
solana/metadata/: README.md
solana/programs/booty/: Cargo.toml
solana/programs/booty/src/: lib.rs
solana/programs/dotty-nft/: Cargo.toml
solana/programs/dotty-nft/src/: lib.rs
solana/programs/game/: Cargo.toml
solana/programs/game/src/: lib.rs
solana/programs/treasure-deposit/: Cargo.toml
solana/programs/treasure-deposit/src/: lib.rs
solana/scripts/: create-test-token.ts  deploy-booty-devnet.sh  deploy-booty-mainnet.sh  deploy.sh  initialize-booty.ts
solana/tests/: booty.ts  dotty-nft.ts  game.ts  treasure-deposit.ts
src/audio/: SoundTypes.js  SoundTypes.ts
src/components/: ControlsBar.js  EntryScreen.js  EntryScreen.ts  GameOverOverlay.js  GameOverOverlay.ts  HelpMenu.js  HelpMenu.ts  MetadataPanel.tsx  Navigation.tsx  TransactionSuccessModal.tsx  WalletUI.js  WalletUI.ts  (+2 more)
(+187 files in other folders)
