[package]
name = "booty"
version = "0.1.0"
description = "Pirates Booty token program - SPL token for ship movement and treasure mining"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "booty"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1" }
