[package]
name = "game"
version = "0.1.0"
description = "Generic game program for collection-based games with NFTs and token deposits"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "game"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
mpl-token-metadata = "4.1.2"
