[package]
name = "game"
version = "0.1.0"
description = "Generic game program for collection-based games with NFTs and token deposits"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "game"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
mpl-token-metadata = "4.1.2"
